gitea-provisioning/kustomize-provisioning/overlays/demo/gitea-route-host.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gitea
spec:
  host: gitea-teste.apps.middleware.rhbr-lab.com
